- Update to latest release.

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "fifinddo-info.doc.tar.xz": 6b181265b4596c36d94a100a8545b3c71bacc78e
-  "fifinddo-info.source.tar.xz": 0f0e7373e504e5d29ba387e79e75f50d63aa6640
-  "fifinddo-info.tar.xz": c908f1e612359ef31696d4fa508c47227649ffd8
+  fifinddo-info.doc.tar.xz: ac28c54a9b56d131cab0d842e344830d3d49c323
+  fifinddo-info.source.tar.xz: af166f31b911ef543db689e842c8708c2e5940f6
+  fifinddo-info.tar.xz: 437ae238729cc2887d48e928c25207bae1b971c0
