--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  fifinddo-info.doc.tar.xz: ac28c54a9b56d131cab0d842e344830d3d49c323
-  fifinddo-info.source.tar.xz: af166f31b911ef543db689e842c8708c2e5940f6
-  fifinddo-info.tar.xz: 437ae238729cc2887d48e928c25207bae1b971c0
+  fifinddo-info.doc.r29349.tar.xz: c7e181c796182e756432f1e6ef6e07222b7b9107
+  fifinddo-info.r29349.tar.xz: 3f63491053dfe8faf89b212c3b0f5699f0c379da
+  fifinddo-info.source.r29349.tar.xz: babec0fa4804f2699efdb63f16425fdd0874f2eb
